# NoggitRedUpdater

./: CMakeLists.txt  assets.qrc  icon.rc  main.cpp
